--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:quizzes": "node scripts/generate-quizzes.mjs"
   },
   "dependencies": {
+    "@google/genai": "^1.38.0",
     "lucide-react": "^0.563.0",
+    "mammoth": "^1.6.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "@google/genai": "^1.38.0"
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
